# consensus-council

./: .gitignore  README.md  council_consensus.py  council_utils.py  pyproject.toml  requirements-standalone.txt  tavily_search.py
examples/: code_review.py  content_moderation.py  quickstart.py
src/consensus_council/: __init__.py  anti_sycophancy.py  cli.py  cost.py  council.py  stalemate.py  voting.py  web_search.py
src/hydra_consensus/: __init__.py  anti_sycophancy.py  cli.py  cost.py  council.py  stalemate.py  voting.py
tests/: test_anti_sycophancy.py  test_cost.py  test_council.py  test_stalemate.py  test_voting.py
