[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "consensus-council"
version = "0.1.0"
description = "Drop-in multi-model voting with anti-sycophancy and stalemate resolution"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Max" },
]
keywords = [
    "llm",
    "consensus",
    "voting",
    "multi-model",
    "anti-sycophancy",
    "ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.40.0",
    "click>=8.0",
    "rich>=13.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
consensus-council = "consensus_council.cli:main"

[project.urls]
Homepage = "https://github.com/Krusherss/consensus-council"
Repository = "https://github.com/Krusherss/consensus-council"
Issues = "https://github.com/Krusherss/consensus-council/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/consensus_council"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
